--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,51 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
+    <link href="https://unpkg.com/bootstrap@4.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="site.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
-    {% include meta.html %}
-
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    {% include meta.html %}
+</head>
 
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
-  </head>
-
-  <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
-      </div>
+<body>
+    <div class="shadow-sm bg-white header">
+        <div class="h-100 container d-flex align-items-center">
+            <a href="{{ site.baseurl }}/" class="text-decoration-none text-dark">
+                <h5 class="m-0">
+                    <img src="{{ site.avatar }}" />
+                    <span class="d-none d-sm-block">Daryl Clarino</span>
+                </h5>
+            </a>
+            <span class="flex-fill"></span>
+            <a href="#" class="mr-4 text-muted text-decoration-none">Me</a>
+            <a href="#" class="mr-4 text-muted text-decoration-none">Blog</a>
+            <a href="#" class="mr-4 text-muted text-decoration-none">Contact</a>
+            <a href="https://github.com/judedaryl">
+                <img height="40" width="40"
+                    src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
+            </a>
+        </div>
     </div>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
+    <div class="content">
+        <div class="container">
+            {{ content }}
+        </div>
     </div>
+</body>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
-    </div>
-
-    {% include analytics.html %}
-  </body>
 </html>
