--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div class="main-content">
         <div class="shadow-sm bg-white header">
             <div class="h-100 container d-flex align-items-center">
-                <a href="." class="text-decoration-none text-dark">
+                <a href="/" class="text-decoration-none text-dark">
                     <h5 class="m-0 d-flex align-items-center">
                         <img height="30" width="30" style="border-radius: 20px;" class="mr-2"
                             src="https://avatars0.githubusercontent.com/u/13645031?s=460&v=4">
@@ -23,15 +23,15 @@
                     </h5>
                 </a>
                 <span class="flex-fill"></span>
-                <a href="about" class="mr-4 text-muted text-decoration-none">Me</a>
-                <a href="contact" class="mr-4 text-muted text-decoration-none">Contact</a>
+                <a href="/about" class="mr-4 text-muted text-decoration-none">Me</a>
+                <a href="/contact" class="mr-4 text-muted text-decoration-none">Contact</a>
                 <a href="https://github.com/judedaryl">
                     <img height="30" width="30" src="{{ site.baseurl }}/images/GitHub-Mark-64px.png">
                 </a>
             </div>
         </div>
         <div class="content">
-            <div class="container">
+            <div class="container pt-5">
                 {{ content }}
             </div>
         </div>
