--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,15 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <div class="date">
+    <small class="text-muted">{{ page.date | date: "%B %e, %Y" }}</small>
+  </div>
 
-  <div class="entry">
+  <div class="mt-5 entry">
     {{ content }}
   </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+
 
   {% include disqus.html %}
 </article>
