Add angular article

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
 
 <head>
     <link href="https://unpkg.com/bootstrap@4.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="site.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="icon" type="image/x-icon" href="https://avatars0.githubusercontent.com/u/13645031?s=460&v=4">
     {% include meta.html %}
 </head>
 
