--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,6 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
+pre.highlight { padding: 10px; }
 .highlight .cm {
   color: #999988;
   font-style: italic;
